fixed sidenav overflow for long stories

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -27,6 +27,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    max-width: 100px;
+
 
     &.selected {
         background-color: #1976d2;
